Don't free non-tile resources on GPU rasterization toggle

Currently we free all tree resources when GPU rasterization is toggled.
This causes problems for non-tile resources as these resources:
a) Are not impacted by GPU raster and don't need to be re-rasterized.
b) Are not trivially re-creatable, leading to them disappearing.

This change adds a new function ReleaseTileResources, which is used
in place of ReleaseResources when only tile resources need to be freed.

It also renames RecreateResources to RecreateTileResources, as we only
implemented this function for picture layers.

BUG=660929
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2468023002
Cr-Commit-Position: refs/heads/master@{#429354}
(cherry picked from commit 7cedb549a0624a5a592bb592c1a828e52623fcb9)

Review URL: https://codereview.chromium.org/2480533002 .

Cr-Commit-Position: refs/branch-heads/2883@{#442}
Cr-Branched-From: 614d31daee2f61b0180df403a8ad43f20b9f6dd7-refs/heads/master@{#423768}